[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/graphics/UI/summoning_circle.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/UI/on.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/UI/off.png" type="Texture" id=3]
[ext_resource path="res://objects/player/summoning_circle.gd" type="Script" id=4]

[node name="summoning_circle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
drawing_color = Color( 0.733333, 1, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="TextureRect"]
margin_left = 281.0
margin_top = 41.0
margin_right = 319.0
margin_bottom = 79.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="TextureRect"]
margin_left = 175.0
margin_top = 101.0
margin_right = 213.0
margin_bottom = 139.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="TextureRect"]
margin_left = 387.0
margin_top = 101.0
margin_right = 425.0
margin_bottom = 139.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox4" type="CheckBox" parent="TextureRect"]
margin_left = 489.0
margin_top = 161.0
margin_right = 527.0
margin_bottom = 199.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox5" type="CheckBox" parent="TextureRect"]
margin_left = 489.056
margin_top = 281.0
margin_right = 527.056
margin_bottom = 319.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox6" type="CheckBox" parent="TextureRect"]
margin_left = 489.0
margin_top = 400.0
margin_right = 527.0
margin_bottom = 438.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox7" type="CheckBox" parent="TextureRect"]
margin_left = 73.0
margin_top = 400.0
margin_right = 111.0
margin_bottom = 438.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox8" type="CheckBox" parent="TextureRect"]
margin_left = 73.0
margin_top = 281.0
margin_right = 111.0
margin_bottom = 319.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox9" type="CheckBox" parent="TextureRect"]
margin_left = 73.0
margin_top = 161.0
margin_right = 111.0
margin_bottom = 199.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox10" type="CheckBox" parent="TextureRect"]
margin_left = 281.0
margin_top = 281.0
margin_right = 319.0
margin_bottom = 319.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox11" type="CheckBox" parent="TextureRect"]
margin_left = 281.0
margin_top = 520.0
margin_right = 319.0
margin_bottom = 558.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox12" type="CheckBox" parent="TextureRect"]
margin_left = 175.0
margin_top = 461.0
margin_right = 213.0
margin_bottom = 499.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox13" type="CheckBox" parent="TextureRect"]
margin_left = 387.0
margin_top = 461.0
margin_right = 425.0
margin_bottom = 499.0
custom_icons/checked = ExtResource( 2 )
custom_icons/unchecked = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dev" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="dev_spell_name" type="LineEdit" parent="dev"]
margin_left = 24.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dev_spell_cost" type="LineEdit" parent="dev"]
margin_left = 24.0
margin_top = 72.0
margin_right = 128.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dev_spell_class" type="OptionButton" parent="dev"]
margin_left = 24.0
margin_top = 139.0
margin_right = 216.0
margin_bottom = 187.0
text = "BASIC"
items = [ "BASIC", null, false, 0, null, "ADVANCED", null, false, 1, null, "CATASTROPHE", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}
